Attempt to fix background color covering too much space.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -99,6 +99,10 @@ main {
   height: 256px;
 }
 
+.option-item-name {
+  display: inline-block;
+}
+
 .aspect-ratio {
   position: relative;
   width: 100%;
